src/messages/MMDSFragmentNotifyAck.h
@@ -12,64 +12,49 @@
  * 
  */
 
-#ifndef CEPH_MMDSFRAGMENTNOTIFY_H
-#define CEPH_MMDSFRAGMENTNOTIFY_H
+#ifndef CEPH_MMDSFRAGMENTNOTIFYAck_H
+#define CEPH_MMDSFRAGMENTNOTIFYAck_H
 
 #include "msg/Message.h"
 
-class MMDSFragmentNotify : public MessageInstance<MMDSFragmentNotify> {
+class MMDSFragmentNotifyAck : public MessageInstance<MMDSFragmentNotifyAck> {
 public:
   friend factory;
 private:
-  static constexpr int HEAD_VERSION = 2;
-  static constexpr int COMPAT_VERSION = 1;
-
   dirfrag_t base_dirfrag;
   int8_t bits = 0;
-  bool ack_wanted = false;
 
  public:
-  inodeno_t get_ino() const { return base_dirfrag.ino; }
-  frag_t get_basefrag() const { return base_dirfrag.frag; }
   dirfrag_t get_base_dirfrag() const { return base_dirfrag; }
   int get_bits() const { return bits; }
-  bool is_ack_wanted() const { return ack_wanted; }
-  void mark_ack_wanted() { ack_wanted = true; }
 
   bufferlist basebl;
 
 protected:
-  MMDSFragmentNotify() :
-    MessageInstance(MSG_MDS_FRAGMENTNOTIFY, HEAD_VERSION, COMPAT_VERSION) {}
-  MMDSFragmentNotify(dirfrag_t df, int b, uint64_t tid) :
-    MessageInstance(MSG_MDS_FRAGMENTNOTIFY, HEAD_VERSION, COMPAT_VERSION),
+  MMDSFragmentNotifyAck() : MessageInstance(MSG_MDS_FRAGMENTNOTIFYACK) {}
+  MMDSFragmentNotifyAck(dirfrag_t df, int b, uint64_t tid) :
+    MessageInstance(MSG_MDS_FRAGMENTNOTIFYACK),
     base_dirfrag(df), bits(b) {
     set_tid(tid);
   }
-  ~MMDSFragmentNotify() override {}
+  ~MMDSFragmentNotifyAck() override {}
 
-public:  
-  const char *get_type_name() const override { return "fragment_notify"; }
+public:
+  const char *get_type_name() const override { return "fragment_notify_ack"; }
   void print(ostream& o) const override {
-    o << "fragment_notify(" << base_dirfrag << " " << (int)bits << ")";
+    o << "fragment_notify_ack(" << base_dirfrag << " " << (int)bits << ")";
   }
 
   void encode_payload(uint64_t features) override {
     using ceph::encode;
     encode(base_dirfrag, payload);
     encode(bits, payload);
-    encode(basebl, payload);
-    encode(ack_wanted, payload);
   }
   void decode_payload() override {
     auto p = payload.cbegin();
     decode(base_dirfrag, p);
     decode(bits, p);
-    decode(basebl, p);
-    if (header.version >= 2)
-      decode(ack_wanted, p);
   }
-  
 };
 
 #endif
